# arete

./: .gitignore  .gitmodules  CMakeLists.txt  build_shaders.sh
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/cmake/: resources.cmake
engine/include/arete/: composer.hpp  core.hpp  engine.hpp  scene.hpp  tickClock.hpp  vulkan.hpp
engine/include/arete/hcs/: actor.hpp  arena.hpp  components.hpp  hcs.hpp  scene.hpp
engine/include/arete/hcs/actors/: actor.hpp  camera.hpp
engine/include/arete/hcs/components/: component.hpp  component_behaviour.hpp  component_data.hpp  component_draw.hpp  component_phys_tick.hpp  component_tick.hpp  mesh_renderer.hpp  spatial.hpp
engine/include/arete/hcs/input/: input.hpp
engine/include/arete/hcs/model/: model.hpp
engine/include/arete/hcs/spatial/: spatial.hpp
engine/include/arete/input/: glfwInput.hpp  input.hpp
engine/include/arete/model/: model.hpp
engine/include/arete/structures/: material.hpp  mesh.hpp  scene.hpp  shader.hpp  structures.hpp  structures_common.hpp
engine/resources/shaders/: cube-frag.spv  cube-fragment.glsl  cube-vert.spv  cube-vertex.glsl  cube.frag  cube.vert  shared.glsl
engine/resources/shaders/common/: shared.glsl.bak
engine/src/: core.cpp  engine.cpp  main.cpp  tickClock.cpp  vulkan.cpp
engine/src/hcs/actors/: camera.cpp
engine/src/hcs/components/: spatial.cpp
engine/src/hcs/spatial/: spatial.cpp
engine/src/input/: glfwInput.cpp  input.cpp
engine/src/vulkan/: display.cpp  engine.cpp  renderer.cpp
engine/tests/: CMakeLists.txt  engine.cpp
resources/: Logo.afdesign
